initial attempt to fix spacing of Save section for mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -759,6 +759,21 @@ footer a {
 }
 
 @media screen and (max-width: 673px) {
+    .save-wrapper {
+        grid-template-columns: 7rem 1fr 7rem 1fr;
+        grid-template-rows: 
+            33rem 
+            22rem
+            30rem;
+        grid-template-areas: 
+            "music-icon1    save1  music-icon3   save2"
+            "record-icon1   save3  record-icon2  save4"
+            ".             save3  music-icon2  save5";
+        flex-direction: column;
+        grid-gap: 1rem;
+        flex-wrap: wrap;
+    }
+
     .more-wrapper {
         grid-template-rows: 
             10rem 
